--- a/code/analyses/bainbridge et al/analyses.Rmd
+++ b/code/analyses/bainbridge et al/analyses.Rmd
@@ -13,7 +13,8 @@ output:
 
 # TODO
 
-- NA
+- What's with the scale labelled NA??
+- Are all scales included?
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(message=FALSE,
@@ -29,6 +30,7 @@ library(kableExtra)
 library(psych)
 library(lme4)
 library(sjPlot)
+library(scales)
 library(ggstance)
 library(marginaleffects)
 library(janitor)
@@ -41,23 +43,73 @@ round_df <- function(df, digits) {
   mutate_if(df, is.numeric, janitor::round_half_up, digits = 2)
 }
 
+dir.create("models")
+
 ```
 
 # Data
 
 ```{r}
 
-data_nested_single_timepoint <- read_rds("../../../data/processed/bainbridge et al/data_nested.rds")
+data_scale_names <- read_csv("../../../data/processed/bainbridge et al/scale abbreviations and full names.csv") |>
+  mutate(scale = ifelse(is.na(subscale), scale, paste(scale, subscale, sep = "_"))) |>
+  select(scale, scale_name)
+
+data_nested <- read_rds("../../../data/processed/bainbridge et al/data_nested.rds") |>
+  left_join(data_scale_names, by = "scale") |>
+  select(-scale) |>
+  rename(scale = scale_name)
 
 data_drop_decisions_no_data <- read_rds("../../../data/processed/bainbridge et al/data_drop_decisions_no_data.rds") |>
   rename(sample_size = subset_n_per_split) |>
   mutate(sample_size                   = as.factor(sample_size),
          match_item_if_dropped         = as.factor(match_item_if_dropped),
-         match_item_if_dropped_or_none = as.factor(match_item_if_dropped_or_none))
+         match_item_if_dropped_or_none = as.factor(match_item_if_dropped_or_none)) |>
+  left_join(data_scale_names, by = "scale") |>
+  select(-scale) |>
+  rename(scale = scale_name)
 
 ```
 
 # Full sample metrics
+
+## Inter-item correlations
+
+```{r fig.height=8, fig.width=8}
+
+lower_half_of_cor_matrix <- function(data){
+  correlations <- cor(as.data.frame(data))
+  
+  correlations[upper.tri(correlations, diag = TRUE)] <- NA
+  
+  return(correlations)
+}
+
+inter_item_correlations <- data_nested |> 
+  mutate(results = map(data, lower_half_of_cor_matrix)) |>
+  select(-data)
+
+# inter_item_correlations$results
+  
+summary_inter_item_correlations <- inter_item_correlations |>
+  mutate(mean_correlation = as.numeric(map(results, mean, na.rm = TRUE)),
+         sd_correlation = as.numeric(map(results, sd, na.rm = TRUE)),
+         min_correlation = as.numeric(map(results, min, na.rm = TRUE)),
+         max_correlation = as.numeric(map(results, max, na.rm = TRUE))) |>
+  select(-results) |>
+  round_df() |>
+  mutate(scale = fct_reorder(scale, mean_correlation))
+
+ggplot(summary_inter_item_correlations, aes(mean_correlation, scale)) +
+  geom_linerangeh(aes(xmin = min_correlation, xmax = max_correlation)) +
+  geom_point() +
+  ylab("") +
+  xlab("Mean inter-item correlation\n(intervals are min and max)") +
+  theme_linedraw()
+
+```
+
+## Full scale Cronbach's $\alpha$
 
 These are already established scales, many of which are well known, with a reasonable range of Cronbach's $\alpha$ values when calculated in a large sample. The subsequent assessment of the replicability of item-dropping recommendations is therefore likely generalizable. 
 
@@ -67,27 +119,27 @@ cronbachs_alpha <- function(data){
   psych::alpha(data)$total["raw_alpha"]
 }
 
-results_overall <- data_nested_single_timepoint |> 
+results_overall <- data_nested |> 
   mutate(results = map(data, cronbachs_alpha)) |>
   unnest(results) |> 
   mutate(n = map(data, nrow)) |>
-  unnest(n)
+  unnest(n) |>
+  left_join(data_scale_names, by = "scale")
 
 results_overall |>
   select(scale, alpha = raw_alpha, n) |>
   round_df(2) |>
   kable() |>
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
+  kable_classic(full_width = FALSE)
 
 results_overall |>
   select(scale, alpha = raw_alpha, n) |>
   summarize(k_scales       = n(),
-            N_participants = sum(n),
             alpha_min      = min(alpha),
             alpha_max      = max(alpha)) |>
   round_df(2) |>
   kable() |>
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
+  kable_classic(full_width = FALSE)
 
 weighted_mean <- janitor::round_half_up(weighted.mean(results_overall$raw_alpha, results_overall$n), 2)
 
@@ -99,9 +151,9 @@ Weighted mean $\alpha$ = `r weighted_mean`, weighted SD =  `r weighted_sd`.
 
 # Frequency of item drop recommendations
 
-```{r fig.height=12, fig.width=10}
+```{r fig.height=12, fig.width=14}
 
-data_n_items <- data_nested_single_timepoint |>
+data_n_items <- data_nested |>
   mutate(n_items_in_scale = as.numeric(map(data, ncol))) |>
   select(-data)
 
@@ -111,7 +163,10 @@ data_drop_decisions_no_data |>
   rename(n_distinct_items_with_drop_recommendations = n) |>
   left_join(data_n_items, by = "scale") |>
   kable() |>
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
+  kable_classic(full_width = FALSE)
+
+# data_drop_decisions_no_data |>
+#   distinct(scale)
 
 p_freq <- 
   data_drop_decisions_no_data |>
@@ -122,10 +177,11 @@ p_freq <-
          item_rank = fct_reorder(item_rank, n, .desc = TRUE)) |>
   ungroup() |>
   select(-item_to_drop_a) |>
+  #drop_na() |>
   ggplot(aes(item_rank, n)) +
   geom_bar(stat = "identity") +
   scale_x_discrete(labels = seq(from = 1, to = max(data_n_items$n_items_in_scale), by = 1)) +
-  facet_wrap(~scale, ncol = 3) +
+  facet_wrap(~ scale, ncol = 3) +
   xlab("Item ranked by number of drop recommendations") +
   ylab("Number of drop recommendations") +
   theme_light()
@@ -136,7 +192,7 @@ ggsave(filename  = "../../../communication/plots/plot_drop_recommendation_freque
        plot      = p_freq,
        device    = "pdf",
        units     = "in",
-       width     = 10,
+       width     = 14,
        height    = 12,
        limitsize = TRUE)
 
@@ -144,25 +200,101 @@ ggsave(filename  = "../../../communication/plots/plot_drop_recommendation_freque
 
 # Replication rate of item-dropping recommendations
 
-Using multilevel logistic models
+## Observed rates
 
 Strategy 1: Drop one item based on max Cronbach's-$\alpha$-if-item-removed. I.e, item dropping was mandatory, even if the alpha in the retained items was lower than the full-scale $\alpha$. Recommendation in each sample could be item 1...item N.
 
 Strategy 2: Drop an item based on max Cronbach's-$\alpha$-if-item-removed if it is higher than the full-scale $\alpha$. I.e, item dropping was not mandatory if it didn't improve $\alpha$. Recommendation in each sample could be item 1...item N or no item dropped.
 
-```{r}
+```{r fig.height=8, fig.width=10}
 
 dat <- data_drop_decisions_no_data |>
-  select(scale, replication, sample_size, match_item_if_dropped, match_item_if_dropped_or_none, sample_size, scale) |>
+  select(scale, replication, sample_size, match_item_if_dropped, match_item_if_dropped_or_none) |>
   pivot_longer(names_to = "strategy",
                values_to = "replicated",
                cols = c(match_item_if_dropped, match_item_if_dropped_or_none))
 
-# fit model
-fit <- 
-  glmer(replicated ~ 1 + sample_size * strategy + (1 | scale),
-        family = binomial(link = "logit"),
-        data = dat)
+dat_replication_rate <- dat |>
+  group_by(scale, strategy, sample_size) |>
+  summarize(replication_rate = mean(as.logical(replicated))) |>
+  mutate(sample_size = paste0("N = ", sample_size),
+         sample_size = fct_relevel(sample_size, "N = 25", "N = 50", "N = 100", "N = 250", "N = 500")) 
+
+p1 <- 
+  ggplot(dat_replication_rate, aes(replication_rate, fct_rev(scale), color = strategy)) +
+  #geom_linerangeh(aes(xmin = conf.low, xmax = conf.high)) +
+  geom_point(position = position_dodge(width = 0.5), shape = "square") +
+  ylab("") +
+  facet_wrap(~ sample_size, nrow = 1) +
+  scale_color_viridis_d(option = "mako", begin = 0.3, end = 0.7,
+                        name = "Item dropping strategy",
+                        labels = c("Mandatory dropping", "Dropping only if it improves alpha"),
+                        guide = guide_legend(reverse = TRUE)) +
+  scale_x_continuous(breaks = breaks_width(.20), 
+                     limits = c(0,1)) +
+  theme_linedraw() +
+  theme(legend.position = "bottom") +
+  xlab("Replication rate")
+
+p1
+
+```
+
+```{r fig.height=8, fig.width=8}
+
+# dat_replication_rate_wide <- dat_replication_rate |>
+#   pivot_wider(names_from = strategy,
+#               values_from = replication_rate) |>
+#   mutate(diff = match_item_if_dropped - match_item_if_dropped_or_none) |>
+#   select(-match_item_if_dropped, -match_item_if_dropped_or_none)
+# 
+# dat_replication_rate_combined <- 
+#   left_join(dat_replication_rate, 
+#             dat_replication_rate_wide,
+#             by = join_by(scale, sample_size)) |>
+#   mutate(scale = fct_reorder(scale, diff))
+
+p2 <-
+  dat_replication_rate |>
+  filter(sample_size == "N = 100") |>
+  ggplot(aes(replication_rate, fct_rev(scale), color = strategy)) +
+  #geom_linerangeh(aes(xmin = conf.low, xmax = conf.high)) +
+  geom_point(position = position_dodge(width = 0.5), shape = "square") +
+  ylab("") +
+  scale_color_viridis_d(option = "mako", begin = 0.3, end = 0.7,
+                        name = "Item dropping strategy",
+                        labels = c("Mandatory dropping", "Dropping only if it improves alpha"),
+                        guide = guide_legend(reverse = TRUE)) +
+  scale_x_continuous(breaks = breaks_width(.20),
+                     limits = c(0,1)) +
+  theme_linedraw() +
+  theme(legend.position = "bottom") +
+  xlab("Replication rate")
+
+p2
+
+```
+
+## Model
+
+Using multilevel logistic models
+
+```{r}
+
+if(file.exists("models/fit.rds")){
+  
+  fit <- read_rds("models/fit.rds")
+  
+} else {
+  
+  fit <- 
+    glmer(replicated ~ 1 + sample_size * strategy + (1 | scale),
+          family = binomial(link = "logit"),
+          data = dat)
+  
+  write_rds(fit, file = "models/fit.rds")
+
+}
 
 # results table
 tab_model(fit)
@@ -174,11 +306,11 @@ results_estimates <- fit |>
 
 ```
 
-## Plot
+### Plot
 
 ```{r fig.height=4, fig.width=6}
 
-plot_replication <- 
+plot_fe <- 
   ggplot(results_estimates, aes(marginalmean, sample_size, color = strategy)) +
   geom_linerangeh(aes(xmin = ci_lower, xmax = ci_upper), position = position_dodge(width = 0.5)) +
   geom_point(size = 2.5, shape = 15, position = position_dodge(width = 0.5)) +
@@ -204,10 +336,10 @@ plot_replication <-
         legend.box.background = element_rect(colour = "black")) +
   guides(color = guide_legend(reverse = TRUE))
 
-plot_replication
+plot_fe
 
 ggsave(filename  = "../../../communication/plots/plot_replication_rate_bainbridge_et_al.pdf",
-       plot      = plot_replication,
+       plot      = plot_fe,
        device    = cairo_pdf, # for greek letters
        units     = "in",
        width     = 6,
@@ -216,7 +348,7 @@ ggsave(filename  = "../../../communication/plots/plot_replication_rate_bainbridg
 
 ```
 
-## Table
+### Table
 
 ```{r}
 
@@ -225,7 +357,7 @@ results_estimates |>
   arrange(sample_size, strategy) |>
   select(strategy, sample_size, marginalmean, ci_lower, ci_upper) |>
   kable() |>
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
+  kable_classic(full_width = FALSE)
 
 ```
 
