--- a/code/processing/aiid/processing3.Rmd
+++ b/code/processing/aiid/processing3.Rmd
@@ -49,15 +49,36 @@ set.seed(42)
 
 data_nested_single_timepoint <- read_rds("../../../data/processed/aiid/data_nested_single_timepoint.rds")
 
+n_replications <- 5000L
+
 ```
+
+N replications = `r n_replications`
 
 # Create nested pairs of samples of data from each scale
 
 ```{r}
 
-if(file.exists("../../../data/processed/aiid/data_replications.rds")){
+if(file.exists("../../../data/processed/aiid/data_nested_single_timepoint_25.rds") & 
+   file.exists("../../../data/processed/aiid/data_nested_single_timepoint_50.rds") & 
+   file.exists("../../../data/processed/aiid/data_nested_single_timepoint_100.rds") & 
+   file.exists("../../../data/processed/aiid/data_nested_single_timepoint_250.rds") & 
+   file.exists("../../../data/processed/aiid/data_nested_single_timepoint_500.rds")){
   
-  data_replications <- read_rds("../../../data/processed/aiid/data_replications.rds")
+  data_nested_single_timepoint_25 <- 
+    read_rds("../../../data/processed/aiid/data_nested_single_timepoint_25.rds")
+  
+  data_nested_single_timepoint_50 <- 
+    read_rds("../../../data/processed/aiid/data_nested_single_timepoint_50.rds")
+  
+  data_nested_single_timepoint_100 <- 
+    read_rds("../../../data/processed/aiid/data_nested_single_timepoint_100.rds")
+  
+  data_nested_single_timepoint_250 <- 
+    read_rds("../../../data/processed/aiid/data_nested_single_timepoint_250.rds")
+  
+  data_nested_single_timepoint_500 <- 
+    read_rds("../../../data/processed/aiid/data_nested_single_timepoint_500.rds")
   
 } else {
   
@@ -81,7 +102,7 @@ if(file.exists("../../../data/processed/aiid/data_replications.rds")){
   data_nested_single_timepoint_25 <- data_nested_single_timepoint |>
     mutate(replications = furrr::future_map(data, 
                                             generate_replications, 
-                                            n_replications = 1000, 
+                                            n_replications = n_replications, 
                                             subset_n_per_split = 25,
                                             .options = furrr_options(seed = TRUE)),
            subset_n_per_split = 25) |>
@@ -91,7 +112,7 @@ if(file.exists("../../../data/processed/aiid/data_replications.rds")){
   data_nested_single_timepoint_50 <- data_nested_single_timepoint |>
     mutate(replications = furrr::future_map(data, 
                                             generate_replications, 
-                                            n_replications = 1000, 
+                                            n_replications = n_replications, 
                                             subset_n_per_split = 50,
                                             .options = furrr_options(seed = TRUE)),
            subset_n_per_split = 50) |>
@@ -101,7 +122,7 @@ if(file.exists("../../../data/processed/aiid/data_replications.rds")){
   data_nested_single_timepoint_100 <- data_nested_single_timepoint |>
     mutate(replications = furrr::future_map(data, 
                                             generate_replications,
-                                            n_replications = 1000,
+                                            n_replications = n_replications,
                                             subset_n_per_split = 100,
                                             .options = furrr_options(seed = TRUE)),
            subset_n_per_split = 100) |>
@@ -111,7 +132,7 @@ if(file.exists("../../../data/processed/aiid/data_replications.rds")){
   data_nested_single_timepoint_250 <- data_nested_single_timepoint |>
     mutate(replications = furrr::future_map(data, 
                                             generate_replications,
-                                            n_replications = 1000,
+                                            n_replications = n_replications,
                                             subset_n_per_split = 250,
                                             .options = furrr_options(seed = TRUE)),
            subset_n_per_split = 250) |>
@@ -121,39 +142,49 @@ if(file.exists("../../../data/processed/aiid/data_replications.rds")){
   data_nested_single_timepoint_500 <- data_nested_single_timepoint |>
     mutate(replications = furrr::future_map(data, 
                                             generate_replications,
-                                            n_replications = 1000, 
+                                            n_replications = n_replications, 
                                             subset_n_per_split = 500,
                                             .options = furrr_options(seed = TRUE)),
            subset_n_per_split = 500) |>
     select(-data) |>
     unnest(replications)
   
-  data_replications <- 
-    bind_rows(data_nested_single_timepoint_25,
-              data_nested_single_timepoint_50,
-              data_nested_single_timepoint_100,
-              data_nested_single_timepoint_250,
-              data_nested_single_timepoint_500)
+  # save individual objects to disk
+  write_rds(data_nested_single_timepoint_25, 
+            "../../../data/processed/aiid/data_nested_single_timepoint_25.rds", 
+            compress = "gz")
   
-  write_rds(data_replications, "../../../data/processed/aiid/data_replications.rds", compress = "gz")
+  write_rds(data_nested_single_timepoint_50, 
+            "../../../data/processed/aiid/data_nested_single_timepoint_50.rds", 
+            compress = "gz")
+  
+  write_rds(data_nested_single_timepoint_100, 
+            "../../../data/processed/aiid/data_nested_single_timepoint_100.rds", 
+            compress = "gz")
+  
+  write_rds(data_nested_single_timepoint_250, 
+            "../../../data/processed/aiid/data_nested_single_timepoint_250.rds", 
+            compress = "gz")
+  
+  write_rds(data_nested_single_timepoint_500, 
+            "../../../data/processed/aiid/data_nested_single_timepoint_500.rds", 
+            compress = "gz")
   
 }
 
 ```
 
-# Calculate alpha and drop decisions for each sample
+# Drop decisions
 
 ```{r}
 
-if(file.exists("../../../data/processed/aiid/data_drop_decisions.rds") & 
-   file.exists("../../../data/processed/aiid/data_drop_decisions_no_data.rds")){
+if(file.exists("../../../data/processed/aiid/data_drop_decisions.rds")){
   
   data_drop_decisions <- read_rds("../../../data/processed/aiid/data_drop_decisions.rds")
-  data_drop_decisions_no_data <- read_rds("../../../data/processed/aiid/data_drop_decisions_no_data.rds")
   
-  } else {
+} else {
   
-  item_to_drop <- function(data){
+  item_to_drop_cronbach <- function(data){
     
     res <- psych::alpha(data)
     
@@ -162,12 +193,29 @@ if(file.exists("../../../data/processed/aiid/data_drop_decisions.rds") &
     res$alpha.drop |>
       as_tibble(rownames = "item") |>
       filter(raw_alpha == max(raw_alpha)) |>
-      select(item_to_drop = item, alpha_if_dropped = raw_alpha) |>
+      select(item_to_drop = item, 
+             alpha_if_dropped = raw_alpha) |>
       mutate(alpha_full_scale = alpha_full_scale,
              item_to_drop_or_none = ifelse(alpha_full_scale >= alpha_if_dropped, "none", item_to_drop))
   }
   
-  alpha_if_given_item_dropped <- function(data, item_to_drop){
+  # alpha_if_given_item_dropped <- function(data, item_to_drop){
+  #   
+  #   res <- data |>
+  #     select(-{{item_to_drop}}) |>
+  #     psych::alpha()
+  #   
+  #   alpha <- as.numeric(res$total["raw_alpha"])
+  #   
+  #   return(alpha)
+  # }
+  
+  
+  item_to_drop_random <- function(data){
+    
+    item_to_drop <- data |>
+      colnames() |>
+      sample(1)
     
     res <- data |>
       select(-{{item_to_drop}}) |>
@@ -175,47 +223,156 @@ if(file.exists("../../../data/processed/aiid/data_drop_decisions.rds") &
     
     alpha <- as.numeric(res$total["raw_alpha"])
     
-    return(alpha)
+    results <- tibble(random_item_to_drop = item_to_drop, 
+                      alpha_if_random_dropped = alpha)
+    
+    return(results)
   }
   
-  data_drop_decisions <- data_replications |>
-    # subset A
-    mutate(alpha_a = furrr::future_map(data_subset_a, item_to_drop)) |>
-    unnest(alpha_a) |>
-    rename(item_to_drop_a         = item_to_drop,
-           item_to_drop_or_none_a = item_to_drop_or_none,
-           alpha_if_dropped_a     = alpha_if_dropped,
-           alpha_full_scale_a     = alpha_full_scale) |>
-    # subset B
-    mutate(alpha_b = furrr::future_map(data_subset_b, item_to_drop)) |>
-    unnest(alpha_b) |>
-    rename(item_to_drop_b         = item_to_drop,
-           item_to_drop_or_none_b = item_to_drop_or_none,
-           alpha_if_dropped_b     = alpha_if_dropped,
-           alpha_full_scale_b     = alpha_full_scale) |>
-    # compare
-    mutate(match_item_if_dropped = item_to_drop_a == item_to_drop_b,
-           match_item_if_dropped_or_none = item_to_drop_or_none_a == item_to_drop_or_none_b) 
-  # # out of sample comparisons
-  # |>
-  #   mutate(alpha_if_a_recommendation_dropped_b = 
-  #            furrr::future_map2(data_subset_b, 
-  #                               item_to_drop_a,
-  #                               alpha_if_given_item_dropped,
-  #                               .options = furrr_options(seed = TRUE))) |>
-  #   mutate(alpha_if_a_recommendation_dropped_b = as.numeric(alpha_if_a_recommendation_dropped_b),
-  #          alpha_b_diff = alpha_full_scale_b - alpha_if_a_recommendation_dropped_b,
-  #          alpha_b_improved = alpha_b_diff > 0)
+  
+  item_to_drop_full_scale_correlation <- function(data){
+    
+    dat <- data |>
+      rownames_to_column(var = "id")
+    
+    mean_scores <- dat |>
+      pivot_longer(cols = -id,
+                   names_to = "item",
+                   values_to = "response") |>
+      group_by(id) |>
+      summarize(mean_score = mean(response), .groups = "drop")
+    
+    dat_with_sum_scores <- 
+      full_join(mean_scores, dat, by = "id") |>
+      select(-id)
+    
+    data.frame(r = cor(dat_with_sum_scores)[1,]) |>
+      rownames_to_column(var = "item") |>
+      filter(item != "mean_score") |>
+      arrange(r) |>
+      slice(1:1) |>
+      select(item_to_drop_fullscalecorrelation = item)
+  }
+  
+  
+  drop_decisions_workflow <- function(data){
+    
+    data |>
+      # subset A
+      mutate(alpha_a = furrr::future_map(data_subset_a, 
+                                         item_to_drop_cronbach,
+                                         .options = furrr_options(seed = TRUE))) |>
+      unnest(alpha_a) |>
+      rename(item_to_drop_a         = item_to_drop,
+             item_to_drop_or_none_a = item_to_drop_or_none,
+             alpha_if_dropped_a     = alpha_if_dropped,
+             alpha_full_scale_a     = alpha_full_scale) |>
+      # subset B
+      mutate(alpha_b = furrr::future_map(data_subset_b,
+                                         item_to_drop_cronbach,
+                                         .options = furrr_options(seed = TRUE))) |>
+      unnest(alpha_b) |>
+      rename(item_to_drop_b         = item_to_drop,
+             item_to_drop_or_none_b = item_to_drop_or_none,
+             alpha_if_dropped_b     = alpha_if_dropped,
+             alpha_full_scale_b     = alpha_full_scale) |>
+      # compare
+      mutate(match_item_if_dropped_cronbach = item_to_drop_a == item_to_drop_b,
+             match_item_if_dropped_or_none_cronbach = item_to_drop_or_none_a == item_to_drop_or_none_b) |>
+      #   # # out of sample comparisons
+      #   # |>
+      #   #   mutate(alpha_if_a_recommendation_dropped_b = 
+      #   #            furrr::future_map2(data_subset_b, 
+      #   #                               item_to_drop_a,
+      #   #                               alpha_if_given_item_dropped,
+      #   #                               .options = furrr_options(seed = TRUE))) |>
+      #   #   mutate(alpha_if_a_recommendation_dropped_b = as.numeric(alpha_if_a_recommendation_dropped_b),
+      #   #          alpha_b_diff = alpha_full_scale_b - alpha_if_a_recommendation_dropped_b,
+      #   #          alpha_b_improved = alpha_b_diff > 0)
+      # alpha if random item dropped
+      mutate(alpha_random_a = furrr::future_map(data_subset_a,
+                                                item_to_drop_random,
+                                                .options = furrr_options(seed = TRUE))) |>
+      unnest(alpha_random_a) |>
+      rename(item_to_drop_random_a     = random_item_to_drop,
+             alpha_if_random_dropped_a = alpha_if_random_dropped) |>
+      # subset B
+      mutate(alpha_random_b = furrr::future_map(data_subset_b,
+                                                item_to_drop_random,
+                                                .options = furrr_options(seed = TRUE))) |>
+      unnest(alpha_random_b) |>
+      rename(item_to_drop_random_b     = random_item_to_drop,
+             alpha_if_random_dropped_b = alpha_if_random_dropped) |>
+      # compare
+      mutate(match_item_if_dropped_random = item_to_drop_random_a == item_to_drop_random_b) |>
+
+      # drop recommendation based on correlation item with lowset correlation with full scale 
+      mutate(fullscalecorrelation_a = furrr::future_map(data_subset_a,
+                                                        item_to_drop_full_scale_correlation,
+                                                        .options = furrr_options(seed = TRUE))) |>
+      unnest(fullscalecorrelation_a) |>
+      rename(item_to_drop_fullscalecorrelation_a = item_to_drop_fullscalecorrelation) |>
+      mutate(fullscalecorrelation_b = furrr::future_map(data_subset_b,
+                                                        item_to_drop_full_scale_correlation,
+                                                        .options = furrr_options(seed = TRUE))) |>
+      unnest(fullscalecorrelation_b) |>
+      rename(item_to_drop_fullscalecorrelation_b = item_to_drop_fullscalecorrelation) |>
+      # compare
+      mutate(match_item_if_dropped_fullscalecorrelation = item_to_drop_fullscalecorrelation_a == item_to_drop_fullscalecorrelation_b,
+             match_cronbach_fullscalecorrelation_a = item_to_drop_fullscalecorrelation_a == item_to_drop_a,
+             match_cronbach_fullscalecorrelation_b = item_to_drop_fullscalecorrelation_b == item_to_drop_b) |>
+      
+      # drop data columns
+      select(-data_subset_a, -data_subset_b)
+  }
+  
+  # fit in batches given that data_replications are very large objects
+    # temp  <- data_nested_single_timepoint_25 |>
+    #   slice(1:1000) |>
+    #   drop_decisions_workflow()
+    # 
+    # mean(temp$match_item_if_dropped_cronbach)
+    # mean(temp$match_item_if_dropped_or_none_cronbach)
+    # mean(temp$match_item_if_dropped_random)
+    # mean(temp$match_item_if_dropped_fullscalecorrelation)
+    # mean(temp$match_cronbach_fullscalecorrelation_a)
+    # mean(temp$match_cronbach_fullscalecorrelation_b)
+
+
+  
+  data_drop_decisions_25  <- drop_decisions_workflow(data_nested_single_timepoint_25)
+  data_drop_decisions_50  <- drop_decisions_workflow(data_nested_single_timepoint_50)
+  data_drop_decisions_100 <- drop_decisions_workflow(data_nested_single_timepoint_100)
+  data_drop_decisions_250 <- drop_decisions_workflow(data_nested_single_timepoint_250)
+  data_drop_decisions_500 <- drop_decisions_workflow(data_nested_single_timepoint_500)
+  
+  # write to disk
+  write_rds(data_drop_decisions_25, 
+            "../../../data/processed/aiid/data_drop_decisions_25.rds", 
+            compress = "gz")
+  
+  write_rds(data_drop_decisions_50, 
+            "../../../data/processed/aiid/data_drop_decisions_50.rds", 
+            compress = "gz")
+  
+  write_rds(data_drop_decisions_100, 
+            "../../../data/processed/aiid/data_drop_decisions_100.rds", 
+            compress = "gz")
+  
+  write_rds(data_drop_decisions_250, 
+            "../../../data/processed/aiid/data_drop_decisions_250.rds", 
+            compress = "gz")
+  
+  # combine
+  data_drop_decisions <- 
+    bind_rows(data_drop_decisions_25,
+              data_drop_decisions_50,
+              data_drop_decisions_100,
+              data_drop_decisions_250,
+              data_drop_decisions_500)
   
   write_rds(data_drop_decisions, 
             "../../../data/processed/aiid/data_drop_decisions.rds", 
-            compress = "gz")
-  
-  data_drop_decisions_no_data <- data_drop_decisions |>
-    select(-data_subset_a, -data_subset_b)
-  
-  write_rds(data_drop_decisions_no_data, 
-            "../../../data/processed/aiid/data_drop_decisions_no_data.rds", 
             compress = "gz")
   
 }
